manifests/overlays/istio-sidecar/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio.io/rev: prod-canary
